# swarm-suite

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GUIDE.md  README.md  REVIEW_REPORT.md  REVIEW_REPORT.sarif  ROADMAP.md  conftest.py  pyproject.toml  swarm-suite-install-issues.md
.archswarm_sessions/: 48c60c86caef.json  f5f5855d583b.json
.claude/commands/: swarm-fix.md  swarm-help.md  swarm-next.md  swarm-release.md  swarm-review.md  swarm-status.md
.github/workflows/: ci.yml
docs/: INDEX.md
docs/architecture/: coordination-primitives.md  expert-profile-format.md  layering.md  mcp-server-pattern.md  pipeline-stages.md  session-storage.md  skill-composition.md
docs/decisions/: 2026-04-26-completion-tools.md  2026-04-26-fix-swarm-arch-coupling.md  2026-04-26-pass5-deep-audit.md  2026-04-26-real-work-review.md  2026-04-26-skill-composition-gap.md  2026-04-26-skill-composition.md  2026-04-26-stage-0a-idea-stage.md  2026-04-26-stage-2-plan-stage.md  2026-04-26-stages-6-7-hardening-release.md  2026-04-26-swarm-core-extraction.md
examples/: README.md
examples/todo_api/: __init__.py  app.py  db.py  pyproject.toml
examples/todo_api/tests/: test_app.py
generated-docs/: HOME.md  INDEX.md
generated-docs/api/: cli.md  config.md  event_bus.md  orchestrator.md  reaction_engine.md
scripts/: attach_skills.py  bump_versions.py  check_imports.py  inject_solid_dry.py  install_all.py  migrate_solid_dry_to_skill.py  publish_all.py  test_all.py  verify_e2e.py
src/arch_swarm/: __init__.py  cli.py  code_scanner.py  debate.py  models.py  server.py
src/arch_swarm/experts/: api-design.yaml  data-modeling.yaml  dependency-architecture.yaml  modularity.yaml  tradeoff-mediator.yaml
src/doc_swarm/: __init__.py  cli.py  code_analyzer.py  doc_generator.py  doc_verifier.py  models.py  server.py  session.py
src/fix_swarm/: __init__.py  arch_adapter.py  cli.py  expert_profiler.py  fix_applier.py  fix_planner.py  models.py  regression_checker.py  report_parser.py  server.py  session_manager.py
src/fix_swarm/experts/: compatibility-fix.yaml  performance-fix.yaml
src/review_swarm/: __init__.py  claim_registry.py  cli.py  config.py  event_bus.py  expert_profiler.py  finding_store.py  message_bus.py  models.py  orchestrator.py  phase_barrier.py  rate_limiter.py  reaction_engine.py  report_generator.py  server.py  session_manager.py
src/review_swarm/experts/: dead-code.yaml  error-handling.yaml  project-context.yaml  resource-lifecycle.yaml  threading-safety.yaml
src/spec_swarm/: __init__.py  server.py  spec_store.py
src/spec_swarm/experts/: configuration-spec.yaml  standards-compliance.yaml  system-integration.yaml
src/swarm_kb/: __init__.py  bootstrap.py  compat.py  config.py  debate_engine.py  debate_store.py  decision_store.py  doc_reader.py  finding_reader.py  finding_writer.py  pipeline.py  quality_gate.py  server.py  xref.py
src/swarm_kb/code_map/: models.py  scanner.py  store.py
tests/: conftest.py  test_cli.py  test_code_scanner.py  test_config_validation.py  test_event_bus.py  test_finding_store.py  test_fix_applier.py  test_fix_planner.py  test_integration.py  test_models.py  test_orchestrator.py  test_rate_limiter.py  test_reaction_engine.py  test_report_parser.py
