[project]
name = "arch-swarm-ai"
version = "0.2.0"
description = "Multi-agent architecture brainstorming -- agents debate code design for simplicity, modularity, and reusability"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ilya Sidorov" }]
readme = "README.md"
keywords = ["architecture", "design", "ai", "agents", "brainstorming", "modularity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0,<9",
    "mcp>=1.0",
    "swarm-kb>=0.2.1",
]

[project.scripts]
arch-swarm = "arch_swarm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arch_swarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["click.*"]
ignore_missing_imports = true
